# tetris-assembly

./: README.md
bringup/: package.xml  setup.py
bringup/launch/: pc.launch.py
data_collection/: README.md  package.xml  setup.py
data_collection/data_collection/: arm_teleop.py  data_collector.py
data_collection/launch/: arm_teleop.launch.py  data_collector.launch.py
detection/: README.md  package.xml  setup.py
detection/detection/: detection.py
detection/launch/: detection.launch.py
grasping/: CMakeLists.txt  README.md  package.xml
grasping/action/: DropTile.action  PickTile.action
grasping/include/grasping/: custom_4dof_ik.hpp
grasping/src/: grasping.cpp
navigation/navigation/: move_to_server.py
orchestration/: package.xml
orchestration/orchestration/: orchestrator.py
slam/config/: slam_toolbox.yaml
tetris_assembly_bringup/launch/: mirte.launch.py  pc.launch.py
